--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -23,13 +23,13 @@
         {% endblock %}
         {% block css %}
             {# Adds custom CSS assets #}
-            <style>{{ assetCombine(fsc.assets['css']) | raw }}</style>
+            <style>{{ assetManager.combine('css') | raw }}</style>
             {# Adds custom CSS blocks #}
             {% for block in fsc.pageComposer.getBlocks('css') %}
                 {{ block.content() | raw }}
             {% endfor %}
         {% endblock %}
-        {{ debugBarRender.renderHead()|raw }}
+        {{ debugBarRender.renderHead() | raw }}
     </head>
     <body>
         {% import 'Macro/PortalTemplate.html.twig' as Macros %}
@@ -150,7 +150,7 @@
                 }
             </script>
             {# Adds custom JS assets #}
-            {% for js in fsc.assets['js'] %}
+            {% for js in assetManager.get('js') %}
                 <script src="{{ js }}"></script>
             {% endfor %}
             {# Adds custom JS blocks #}
