--- a/View/PortalRegisterMe.html.twig
+++ b/View/PortalRegisterMe.html.twig
@@ -9,7 +9,7 @@
                     <div class="panel">
                         <form action="{{ fsc.url() }}?action=register" method="post">
                             <div class="panel-header text-center">
-                                <i class="fas fa-address-card-o fa-2x fa-fw" aria-hidden="true"></i>
+                                <i class="fas fa-address-card fa-2x fa-fw" aria-hidden="true"></i>
                                 <h1 class="panel-title">{{ i18n.trans('register-new-contact') }}</h1>
                             </div>
                             <div class="panel-body">
@@ -25,7 +25,12 @@
                                             <div class="column col-6">
                                                 <div class="form-group">
                                                     <label class="form-label" for="email">{{ i18n.trans('email') }} *</label>
-                                                    <input class="form-input" type="text" name="email" id="email" placeholder="{{ i18n.trans('email') }}" autocomplete="off" required=""/>
+                                                    <div class="input-group">
+                                                        <span class="input-group-addon">
+                                                            <i class="fas fa-at fa-fw"></i>
+                                                        </span>
+                                                        <input class="form-input" type="text" name="email" id="email" placeholder="{{ i18n.trans('email') }}" autocomplete="off" required=""/>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -33,13 +38,23 @@
                                             <div class="column col-6">
                                                 <div class="form-group">
                                                     <label class="form-label" for="password">{{ i18n.trans('password') }} *</label>
-                                                    <input class="form-input" type="password" name="password" id="password" placeholder="{{ i18n.trans('password') }}" required=""/>
+                                                    <div class="input-group">
+                                                        <span class="input-group-addon">
+                                                            <i class="fas fa-key fa-fw"></i>
+                                                        </span>
+                                                        <input class="form-input" type="password" name="password" id="password" placeholder="{{ i18n.trans('password') }}" required=""/>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="column col-6">
                                                 <div class="form-group">
                                                     <label class="form-label" for="password2">{{ i18n.trans('repeat-password') }} *</label>
-                                                    <input class="form-input" type="password" name="password2" id="password2" placeholder="{{ i18n.trans('repeat-password') }}" required=""/>
+                                                    <div class="input-group">
+                                                        <span class="input-group-addon">
+                                                            <i class="fas fa-key fa-fw"></i>
+                                                        </span>
+                                                        <input class="form-input" type="password" name="password2" id="password2" placeholder="{{ i18n.trans('repeat-password') }}" required=""/>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
