--- a/View/Section/EditSection.html.twig
+++ b/View/Section/EditSection.html.twig
@@ -42,7 +42,7 @@
                 {% if section.settings.btnDelete %}
                     <div class="column">
                         <button type="button" class="btn btn-error" onclick="editSectionDelete('{{ section.getViewName() }}');">
-                            <i class="fas fa-trash fa-fw" aria-hidden="true"></i>
+                            <i class="fas fa-trash-alt fa-fw" aria-hidden="true"></i>
                             {{ i18n.trans('delete') }}
                         </button>
                     </div>
