--- a/View/Section/EditSection.html.twig
+++ b/View/Section/EditSection.html.twig
@@ -3,11 +3,11 @@
 {% set action = section.model.exists() ? 'edit' : 'insert' %}
 
 <script type="text/javascript">
-    function editSectionDelete(viewName) {
+    function editSectionDelete(formName) {
         var value = confirm("{{ i18n.trans('confirm-delete') }} {{ i18n.trans('are-you-sure') }}");
         if (value == true) {
-            $("#form" + viewName + " :input[name=\"action\"]").val("delete");
-            $("#form" + viewName).submit();
+            $("#form" + formName + " :input[name=\"action\"]").val("delete");
+            $("#form" + formName).submit();
         }
 
         return false;
