--- a/View/Master/SectionController.html.twig
+++ b/View/Master/SectionController.html.twig
@@ -4,6 +4,8 @@
     {% import _self as macros %}
 
     <div class="body-section">
+        {{ macros.navigationLinks(fsc.navigationLinks) }}
+
         <div class="container">
             <div class="columns">
                 <div class="column">
@@ -93,6 +95,26 @@
         });
     </script>
 {% endblock %}
+
+{% macro navigationLinks(links) %}
+    {% if links | length > 0 %}
+        <div class="container">
+            <div class="columns">
+                <div class="column col-2">
+                </div>
+                <div class="column">
+                    <ul class="breadcrumb">
+                        {% for link in links %}
+                            <li class="breadcrumb-item">
+                                <a href="{{ link.url }}">{{ link.title }}</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+{% endmacro %}
 
 {% macro sectionsButtons(fsc, i18n) %}
     <div class="hide-md">
