- Fixed bug with autocomplete widget. - Added unnautorize http responses to edit, insert and delete actions.

--- a/Assets/CSS/webportal.css
+++ b/Assets/CSS/webportal.css
@@ -66,6 +66,10 @@ p {
     word-wrap: break-word;
 }
 
+.ui-autocomplete {
+    z-index: 500;
+}
+
 @media screen and (max-width: 600px) {
     .custom-scroll {
         overflow-x: auto;
