--- a/View/Section/EditListSection.html.twig
+++ b/View/Section/EditListSection.html.twig
@@ -31,8 +31,8 @@
                 {{ i18n.trans('new') }}
             </button>
         </div>
-        <div class="modal modal-lg" id="modal{{ formName }}">
-            <a href="#close" class="modal-overlay" aria-label="Close"></a>
+        <div class="modal" id="modal{{ formName }}">
+            <a href="#close" class="modal-overlay" aria-label="Close" onclick="return hideModal('modal{{ formName }}');"></a>
             <div class="modal-container">
                 <div class="modal-header">
                     <a href="#close" class="btn btn-clear float-right" aria-label="Close" onclick="return hideModal('modal{{ formName }}');"></a>
