--- a/View/PortalRegisterMe.html.twig
+++ b/View/PortalRegisterMe.html.twig
@@ -1,81 +1,95 @@
 {% extends "Master/PortalTemplate.html.twig" %}
 
 {% block body %}
+    {% import _self as macros %}
     <div class="body-section">
         <br/>
         <div class="container grid-lg">
             <div class="columns">
                 <div class="column col-12">
-                    <div class="panel">
-                        <form action="{{ fsc.url() }}?action=register" method="post">
-                            <div class="panel-header text-center">
-                                <i class="fas fa-address-card fa-2x fa-fw" aria-hidden="true"></i>
-                                <h1 class="panel-title">{{ i18n.trans('register-new-contact') }}</h1>
+                    {% if fsc.registrationOK %}
+                        <div class="empty">
+                            <div class="empty-icon">
+                                <i class="fas fa-envelope fa-3x fa-fw" aria-hidden="true"></i>
                             </div>
-                            <div class="panel-body">
-                                {% if appSettings.get('webportal','allownewregistrations','false') == 'true' %}
-                                    <div class="container">
-                                        <div class="columns">
-                                            <div class="column col-6">
-                                                <div class="form-group">
-                                                    <label class="form-label" for="name">{{ i18n.trans('name') }}</label>
-                                                    <input class="form-input" type="text" name="name" id="name" placeholder="{{ i18n.trans('name') }}" autocomplete="off" autofocus=""/>
-                                                </div>
-                                            </div>
-                                            <div class="column col-6">
-                                                <div class="form-group">
-                                                    <label class="form-label" for="email">{{ i18n.trans('email') }} *</label>
-                                                    <div class="input-group">
-                                                        <span class="input-group-addon">
-                                                            <i class="fas fa-at fa-fw"></i>
-                                                        </span>
-                                                        <input class="form-input" type="text" name="email" id="email" placeholder="{{ i18n.trans('email') }}" autocomplete="off" required=""/>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="columns">
-                                            <div class="column col-6">
-                                                <div class="form-group">
-                                                    <label class="form-label" for="password">{{ i18n.trans('password') }} *</label>
-                                                    <div class="input-group">
-                                                        <span class="input-group-addon">
-                                                            <i class="fas fa-key fa-fw"></i>
-                                                        </span>
-                                                        <input class="form-input" type="password" name="password" id="password" placeholder="{{ i18n.trans('password') }}" required=""/>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="column col-6">
-                                                <div class="form-group">
-                                                    <label class="form-label" for="password2">{{ i18n.trans('repeat-password') }} *</label>
-                                                    <div class="input-group">
-                                                        <span class="input-group-addon">
-                                                            <i class="fas fa-key fa-fw"></i>
-                                                        </span>
-                                                        <input class="form-input" type="password" name="password2" id="password2" placeholder="{{ i18n.trans('repeat-password') }}" required=""/>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                {% else %}
-                                    <div class="container text-center">
-                                        {{ i18n.trans('new-registrations-are-closed') }}
-                                    </div>
-                                {% endif %}
-                            </div>
-                            <div class="panel-footer text-right">
-                                {% if appSettings.get('webportal','allownewregistrations','false') == 'true' %}
-                                    <div class="container">
-                                        <button class="btn btn-primary input-group-btn">{{ i18n.trans('register-me') }}</button>
-                                    </div>
-                                {% endif %}
-                            </div>
-                        </form>
-                    </div>
+                            <p class="empty-title h5">{{ i18n.trans('activation-email-sent') }}</p>
+                        </div>
+                    {% else %}
+                        {{ macros.RegistrationForm(fsc, i18n, appSettings) }}
+                    {% endif %}
                 </div>
             </div>
         </div>
     </div>
 {% endblock %}
+
+{% macro RegistrationForm(fsc, i18n, appSettings) %}
+    <div class="panel">
+        <form action="{{ fsc.url() }}?action=register" method="post">
+            <div class="panel-header text-center">
+                <i class="fas fa-address-card fa-2x fa-fw" aria-hidden="true"></i>
+                <h1 class="panel-title">{{ i18n.trans('register-new-contact') }}</h1>
+            </div>
+            <div class="panel-body">
+                {% if appSettings.get('webportal','allownewregistrations','false') == 'true' %}
+                    <div class="container">
+                        <div class="columns">
+                            <div class="column col-6">
+                                <div class="form-group">
+                                    <label class="form-label" for="name">{{ i18n.trans('name') }}</label>
+                                    <input class="form-input" type="text" name="name" id="name" placeholder="{{ i18n.trans('name') }}" autocomplete="off" autofocus=""/>
+                                </div>
+                            </div>
+                            <div class="column col-6">
+                                <div class="form-group">
+                                    <label class="form-label" for="email">{{ i18n.trans('email') }} *</label>
+                                    <div class="input-group">
+                                        <span class="input-group-addon">
+                                            <i class="fas fa-at fa-fw"></i>
+                                        </span>
+                                        <input class="form-input" type="text" name="email" id="email" placeholder="{{ i18n.trans('email') }}" autocomplete="off" required=""/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="columns">
+                            <div class="column col-6">
+                                <div class="form-group">
+                                    <label class="form-label" for="password">{{ i18n.trans('password') }} *</label>
+                                    <div class="input-group">
+                                        <span class="input-group-addon">
+                                            <i class="fas fa-key fa-fw"></i>
+                                        </span>
+                                        <input class="form-input" type="password" name="password" id="password" placeholder="{{ i18n.trans('password') }}" required=""/>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="column col-6">
+                                <div class="form-group">
+                                    <label class="form-label" for="password2">{{ i18n.trans('repeat-password') }} *</label>
+                                    <div class="input-group">
+                                        <span class="input-group-addon">
+                                            <i class="fas fa-key fa-fw"></i>
+                                        </span>
+                                        <input class="form-input" type="password" name="password2" id="password2" placeholder="{{ i18n.trans('repeat-password') }}" required=""/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% else %}
+                    <div class="container text-center">
+                        {{ i18n.trans('new-registrations-are-closed') }}
+                    </div>
+                {% endif %}
+            </div>
+            <div class="panel-footer text-right">
+                {% if appSettings.get('webportal','allownewregistrations','false') == 'true' %}
+                    <div class="container">
+                        <button class="btn btn-primary input-group-btn">{{ i18n.trans('register-me') }}</button>
+                    </div>
+                {% endif %}
+            </div>
+        </form>
+    </div>
+{% endmacro %}
