--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -54,7 +54,7 @@
             </div>
             <div class="modal-body">
                 <div class="content">
-                    <ul class="tab tab-block">
+                    <ul class="tab tab-block mb-2">
                         <li class="tab-item">
                             <a href="#" id="btnLoginModalCustomers" class="active" onclick="return showLoginModalTab('Customers', 'Employees');">{{ i18n.trans('customers') }}</a>
                         </li>
@@ -63,7 +63,6 @@
                         </li>
                     </ul>
                     <div id="divLoginModalCustomers">
-                        <br/>
                         {% set facebook = appSettings.get('webportal','fbappid','') %}
                         {% set google = appSettings.get('webportal','googleappid','') %}
                         {% set twitter = appSettings.get('webportal','twitterappid','') %}
@@ -84,7 +83,7 @@
                             </a>
                         {% endif %}
                         {% if fsLogin and (facebook or google or twitter) %}
-                            <p>{{ i18n.trans('login-with-social-or-email') }}</p>
+                            <p class="form-input-hint">{{ i18n.trans('login-with-social-or-email') }}</p>
                         {% endif %}
                         {% if fsLogin %}
                             <form action="{{ constant('FS_ROUTE') }}/HybridLogin?prov=fs" method="post" class="form">
@@ -102,22 +101,21 @@
                                             <i class="fas fa-key fa-fw" aria-hidden="true"></i>
                                         </span>
                                         <input type="password" name="fsContactPass" id="fsContactPass" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('password') }}" required="" autocomplete="off"/>
+                                        <button type="submit" class="btn btn-primary input-group-btn">
+                                            <i class="fas fa-sign-in-alt fa-fw"></i>
+                                        </button>
                                     </div>
                                     <p class="form-input-hint">{{ i18n.trans('webportal-forgotten-password') }}</p>
                                 </div>
-                                <button type="submit" class="btn btn-block btn-primary">
-                                    {{ i18n.trans('login') }}
-                                </button>
                                 {% if appSettings.get('webportal','allownewregistrations','false') == 'true' %}
                                     <a class="btn btn-block btn-success" href="{{ constant('FS_ROUTE') }}/PortalRegisterMe">
-                                        {{ i18n.trans('register-me') }}
+                                        <i class="fas fa-edit fa-fw"></i> {{ i18n.trans('register-me') }}
                                     </a>
                                 {% endif %}
                             </form>
                         {% endif %}
                     </div>
                     <div id="divLoginModalEmployees" class="d-hide">
-                        <br/>
                         <form action="{{ constant('FS_ROUTE') }}/" method="post" class="form">
                             <div class="form-group">
                                 <div class="input-group">
