--- a/View/Master/SectionControllerFixed.html.twig
+++ b/View/Master/SectionControllerFixed.html.twig
@@ -25,7 +25,7 @@
                             <ul class="menu">
                                 {% for sectionName, section in fsc.sections %}
                                     <li class="menu-item">
-                                        <a href="EditPageOption?code={{ sectionName }}" target="_blank">
+                                        <a href="{{ asset('EditPageOption?code=' ~ sectionName) }}" target="_blank">
                                             <i class="{{ section.icon }} fa-fw" aria-hidden="true"></i> {{ section.title }}
                                         </a>
                                     </li>
