--- a/View/Master/SectionControllerFixed.html.twig
+++ b/View/Master/SectionControllerFixed.html.twig
@@ -60,7 +60,7 @@
     {% if links | length > 0 %}
         <div class="container">
             <div class="columns">
-                <div class="column col-2">
+                <div class="column col-2 col-xs-12">
                 </div>
                 <div class="column">
                     <ul class="breadcrumb">
