--- a/View/Section/EditListSection.html.twig
+++ b/View/Section/EditListSection.html.twig
@@ -117,11 +117,11 @@
         <div class="btn-group">
             {% for page in section.getPagination() %}
                 {% if page.active %}
-                    <button type="button" class="btn btn-light active" onclick="EditListViewSetOffset('{{ section.getViewName() }}', '{{ page.offset }}');">
+                    <button type="button" class="btn btn-light active" onclick="showSectionPage('{{ section.getViewName() }}', '{{ page.offset }}');">
                         {{ page.num }}
                     </button>
                 {% else %}
-                    <button type="button" class="btn btn-light" onclick="EditListViewSetOffset('{{ section.getViewName() }}', '{{ page.offset }}');">
+                    <button type="button" class="btn btn-light" onclick="showSectionPage('{{ section.getViewName() }}', '{{ page.offset }}');">
                         {{ page.num }}
                     </button>
                 {% endif %}
