--- a/View/Master/SectionController.html.twig
+++ b/View/Master/SectionController.html.twig
@@ -60,6 +60,15 @@
             $("#secDiv" + name).removeClass("d-hide");
             return false;
         }
+        function showSectionDelete(formName) {
+            var value = confirm("{{ i18n.trans('confirm-delete') }} {{ i18n.trans('are-you-sure') }}");
+            if (value == true) {
+                $("#form" + formName + " :input[name=\"action\"]").val("delete");
+                $("#form" + formName).submit();
+            }
+
+            return false;
+        }
         function showSectionPage(name, offset) {
             $("#secForm" + name + " input[name=offset]").val(offset);
             $("#secForm" + name).submit();
