--- a/View/Master/SectionControllerFixed.html.twig
+++ b/View/Master/SectionControllerFixed.html.twig
@@ -15,7 +15,7 @@
         {# -- Other sections -- #}
         <div class="container">
             <div class="columns">
-                <div class="column">
+                <div class="column col-2 col-lg-12">
                     {# -- Options button -- #}
                     {% if fsc.user %}
                         <div class="dropdown">
@@ -39,7 +39,7 @@
                         {{ macros.sectionsButtons(fsc, i18n, firstSectionName) }}
                     {% endif %}
                 </div>
-                <div class="column col-10 col-md-12">
+                <div class="column">
                     {# -- Section contents -- #}
                     {% for sectionName, section in fsc.sections %}
                         {% if sectionName != firstSectionName %}
@@ -77,7 +77,7 @@
 {% endmacro %}
 
 {% macro sectionsButtons(fsc, i18n, firstSectionName) %}
-    <div class="hide-md">
+    <div class="hide-lg">
         {% for name, group in fsc.getSectionGroups() %}
             <ul class="menu">
                 {% if name != '' %}
@@ -105,35 +105,28 @@
         {% endfor %}
     </div>
     {# -- Smartphone section dropdown -- #}
-    <div class="dropdown show-md mb-2">
-        <div class="btn-group">
-            <a href="#" class="btn dropdown-toggle" tabindex="0">
-                <i class="fas fa-chevron-circle-down fa-fw"></i> {{ i18n.trans('sections') }}
-            </a>
-            <ul class="menu">
-                {% for name, group in fsc.getSectionGroups() %}
-                    {% if name != '' %}
-                        <li class="divider" data-content="{{ i18n.trans(name) }}">
+    <div class="show-lg mb-2">
+        <ul class="tab tab-block">
+            {% for name, group in fsc.getSectionGroups() %}
+                {% if name != '' %}
+                </ul>
+                <ul class="tab tab-block">
+                    <li class="tab-item">
+                        {{ i18n.trans(name) }}
+                    </li>
+                {% endif %}
+                {% for sectionName, section in group %}
+                    {% if sectionName != firstSectionName %}
+                        {% set tabClass = (sectionName == fsc.active) or (fsc.active == firstSectionName and loop.index == 2 and name == '') ? 'active' : '' %}
+                        <li class="tab-item">
+                            <a href="#" id="secBtn{{ sectionName }}2" class="section-tab {{ tabClass }}" onclick="return showSection('{{ sectionName }}');">
+                                <i class="{{ section.icon }} fa-fw" aria-hidden="true"></i>
+                                <br/>{{ section.title }}
+                            </a>
                         </li>
                     {% endif %}
-                    {% for sectionName, section in group %}
-                        {% if sectionName != firstSectionName %}
-                            {% set tabClass = (sectionName == fsc.active) or (fsc.active == firstSectionName and loop.index == 2 and name == '') ? 'active' : '' %}
-                            <li class="menu-item">
-                                {% if section.count > 0 %}
-                                    <div class="menu-badge">
-                                        <label class="label label-primary">{{ section.count }}</label>
-                                    </div>
-                                {% endif %}
-                                <a href="#" id="secBtn{{ sectionName }}2" class="section-tab {{ tabClass }}" onclick="return showSection('{{ sectionName }}');">
-                                    <i class="{{ section.icon }} fa-fw" aria-hidden="true"></i>
-                                    {{ section.title }}
-                                </a>
-                            </li>
-                        {% endif %}
-                    {% endfor %}
                 {% endfor %}
-            </ul>
-        </div>
+            {% endfor %}
+        </ul>
     </div>
 {% endmacro %}
